# low-latency-application

./: CMakeLists.txt  CMakeLists_intermediate.txt  CMakeLists_production.txt  CMakeLists_simple.txt  DEVELOPMENT_SETUP.md  FINAL_PROJECT_STATUS.md  GETTING_STARTED.md  Makefile  NEXT_STEPS_GUIDE.md  PRODUCTION_READINESS.md  PROJECT_STATUS.md  README.md  Requirements.cursorrules  TEST_RESULTS.md
config/: aeron_config.json  system_config.json
include/common/: Config.h  DCIndicator.h  DCIndicator_simple.h  Logger.h  MockAeron.h  TimeUtils.h  TimeUtils_simple.h
include/execution/: ExecutionEngine.h
include/market_data/: MarketDataProcessor.h
include/strategy/: StrategyEngine.h
scripts/: deploy_production.ps1  install_dependencies.ps1  install_dev_tools.ps1  production_setup.ps1  quick_start.sh  run_system.sh  simple_install.ps1
src/common/: Config.cpp  DCIndicator.cpp  Logger.cpp  TimeUtils.cpp
src/execution/: ExecutionEngine.cpp
src/main/: market_data_simulator.cpp  trading_system_main.cpp
src/market_data/: MarketDataProcessor.cpp
src/strategy/: StrategyEngine.cpp
test/: advanced_test.cpp  dc_detailed_test.cpp  integration_test.cpp  production_benchmark.cpp  quick_integration_test.cpp  simple_test.cpp
